style + for each

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="main-title">PET ADOPTION</h1>
     <header class="site-header">
         <div class="filterInputs">
-            <label><input type="radio" name="pet" value="" checked><i></i>All Animals!</label>
+            <label><input type="radio" name="pet" value="" checked><i></i>Everyone!</label>
             <label class="dogs"><input type="radio" name="pet" value="dog"><i></i>Dogs!</label>
             <label class="cats"><input type="radio" name="pet" value="cat"><i></i>Cats!</label>
             <label class="dinos"><input type="radio" name="pet" value="dino"><i></i>Dinos!</label>
