--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pets!</title>
     <link rel="stylesheet" href="./main.css">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="main-title">PET ADOPTION</h1>
+    <h1 class="main-title">PET ADOPTION!</h1>
     <header class="site-header">
         <div class="filterInputs">
             <label><input type="radio" name="pet" value="" checked><i></i>Everyone!</label>
             <label class="dogs"><input type="radio" name="pet" value="dog"><i></i>Dogs!</label>
             <label class="cats"><input type="radio" name="pet" value="cat"><i></i>Cats!</label>
             <label class="dinos"><input type="radio" name="pet" value="dino"><i></i>Dinos!</label>
-          </div>
+        </div>
         </header>
     <main>
         <div class="pet-main" id="pet-cards"></div>
