--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <h1 class="main-title">PET ADOPTION!</h1>
     <header class="site-header">
-        <div class="filterInputs">
-            <label><input type="radio" name="pet" value="" checked><i></i>Everyone!</label>
-            <label class="dogs"><input type="radio" name="pet" value="dog"><i></i>Dogs!</label>
-            <label class="cats"><input type="radio" name="pet" value="cat"><i></i>Cats!</label>
-            <label class="dinos"><input type="radio" name="pet" value="dino"><i></i>Dinos!</label>
+        <div class="instructor-buttons">
+            <button id="All" class="all-button">Everyone!</button>
+            <button id="dog" class="dog-button">Dogs!</button>
+            <button id="cat" class="cat-button">Cats!</button>
+            <button id="dino" class="dino-button">Dinos!</button>
         </div>
         </header>
     <main>
